NBStudioCore/src/org/nbstudio/syntax/mac/macParser.java
// Generated from /home/daimor/Dropbox/myProjects/NBStudio/NBStudioCore/src/org/nbstudio/syntax/mac/macParser.g4 by ANTLR 4.1

    package org.nbstudio.syntax.mac; 

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class macParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=45, Special=71, CommandRBRACE=69, MACMethodPrivate=8, LBRACK=43, 
		Property=13, CMDComments=60, ObjectSuper=55, LBRACE=41, DefineExpression=58, 
		FLOAT=16, UserFunction=46, ID=14, Define=57, ASTERISK=31, LPAREN=39, SQLBlock=10, 
		AT=27, QUESTON=30, RPAREN=40, ObjectMethod=1, EOL=18, SLASH=33, SpecialGlobal=7, 
		EXCLAMATION=29, CommandCOLON=66, COMMA=20, Spaces=36, HTMLBlock=12, EQUAL=19, 
		CARET=48, Negative=53, PLUS=24, DOT=23, COMMENT=35, ObjectClass=54, ObjectName=2, 
		Macros=47, Dollar=21, RBRACK=44, GlobalName=5, PERCENT=26, SHARP=28, RBRACE=42, 
		CommandLBRACE=68, CommandJOB=63, ObjectThis=56, CommandDO=61, CMD=64, 
		UNDERSCORE=32, CommandGOTO=62, Colon=22, INT=15, CondOper=52, MINUS=25, 
		CommandSPACE=65, Include=59, CMDMacros=72, WS=50, RPClass=38, JSBlock=11, 
		LPClass=37, RoutineName=4, MACMethodPublic=9, CommandEOL=67, CommandCOMMA=70, 
		Label=3, SystemVariable=6, WSNL=51, VertBar=49, STRING=17, BACKSLASH=34;
	public static final String[] tokenNames = {
		"<INVALID>", "ObjectMethod", "ObjectName", "Label", "RoutineName", "GlobalName", 
		"SystemVariable", "SpecialGlobal", "MACMethodPrivate", "MACMethodPublic", 
		"SQLBlock", "JSBlock", "HTMLBlock", "Property", "ID", "INT", "FLOAT", 
		"STRING", "EOL", "EQUAL", "COMMA", "'$'", "Colon", "'.'", "PLUS", "MINUS", 
		"'%'", "'@'", "'#'", "'!'", "'?'", "'*'", "UNDERSCORE", "'/'", "'\\'", 
		"COMMENT", "Spaces", "LPClass", "RPClass", "LPAREN", "RPAREN", "LBRACE", 
		"RBRACE", "LBRACK", "RBRACK", "FUNCTION", "UserFunction", "Macros", "'^'", 
		"'|'", "WS", "WSNL", "CondOper", "'''", "ObjectClass", "ObjectSuper", 
		"ObjectThis", "Define", "DefineExpression", "Include", "CMDComments", 
		"CommandDO", "CommandGOTO", "CommandJOB", "CMD", "CommandSPACE", "CommandCOLON", 
		"CommandEOL", "CommandLBRACE", "CommandRBRACE", "CommandCOMMA", "'&'", 
		"CMDMacros"
	};
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_blockStatement = 2, RULE_comments = 3, 
		RULE_simpleStatement = 4, RULE_macrosAsCommand = 5, RULE_includeStatement = 6, 
		RULE_includeRtn = 7, RULE_define = 8, RULE_breakCommand = 9, RULE_breakStatement = 10, 
		RULE_catchCommand = 11, RULE_catchStatement = 12, RULE_closeCommand = 13, 
		RULE_closeStatement = 14, RULE_continueCommand = 15, RULE_doCommand = 16, 
		RULE_doStatement = 17, RULE_elseCommand1 = 18, RULE_elseCommand2 = 19, 
		RULE_elseStatement = 20, RULE_elseifCommand = 21, RULE_forCommand = 22, 
		RULE_forStatement = 23, RULE_forExpression = 24, RULE_gotoCommand = 25, 
		RULE_gotoStatement = 26, RULE_haltCommand = 27, RULE_hangCommand = 28, 
		RULE_hangStatement = 29, RULE_ifCommand = 30, RULE_ifStatement = 31, RULE_jobCommand = 32, 
		RULE_jobStatement = 33, RULE_jobArgument = 34, RULE_jobProcessParams = 35, 
		RULE_killCommand = 36, RULE_killStatement = 37, RULE_killArgument = 38, 
		RULE_lockCommand = 39, RULE_lockStatement = 40, RULE_lockArgument = 41, 
		RULE_lockArgument2 = 42, RULE_mergeCommand = 43, RULE_mergeStatement = 44, 
		RULE_mergeArgument = 45, RULE_newCommand = 46, RULE_newStatement = 47, 
		RULE_openCommand = 48, RULE_openStatement = 49, RULE_quitCommand = 50, 
		RULE_quitStatement = 51, RULE_readCommand = 52, RULE_readStatement = 53, 
		RULE_readArgument = 54, RULE_setCommand = 55, RULE_setStatement = 56, 
		RULE_setArgument = 57, RULE_tcommitCommand = 58, RULE_throwCommand = 59, 
		RULE_trollbackCommand = 60, RULE_tryCommand = 61, RULE_tryStatement = 62, 
		RULE_tstartCommand = 63, RULE_useCommand = 64, RULE_useStatement = 65, 
		RULE_viewCommand = 66, RULE_viewStatement = 67, RULE_whileCommand = 68, 
		RULE_whileStatement = 69, RULE_writeCommand = 70, RULE_writeStatement = 71, 
		RULE_writeArgument = 72, RULE_xecuteCommand = 73, RULE_xecuteStatement = 74, 
		RULE_xeceuteArgument = 75, RULE_zkillCommand = 76, RULE_zkillStatement = 77, 
		RULE_znspaceCommand = 78, RULE_ztrapCommand = 79, RULE_zwriteCommand = 80, 
		RULE_zwriteStatement = 81, RULE_zzdumpCommand = 82, RULE_zzdumpStatement = 83, 
		RULE_printCommand = 84, RULE_printStatement = 85, RULE_zbreakCommand = 86, 
		RULE_zbreakStatement = 87, RULE_zinsertCommand = 88, RULE_zloadCommand = 89, 
		RULE_zprintCommand = 90, RULE_zremoveCommand = 91, RULE_zsaveCommand = 92, 
		RULE_systemFunction = 93, RULE_variable = 94, RULE_localVariable = 95, 
		RULE_globalVariable = 96, RULE_localVariableList = 97, RULE_colonExpression = 98, 
		RULE_expression = 99, RULE_simpleExpression = 100, RULE_condition = 101, 
		RULE_pc = 102, RULE_arguments = 103, RULE_doClass = 104, RULE_doRoutine = 105, 
		RULE_doArgument = 106, RULE_labelDef = 107, RULE_methodPublicVariables = 108, 
		RULE_methodContent = 109, RULE_labelParameter = 110;
	public static final String[] ruleNames = {
		"prog", "statement", "blockStatement", "comments", "simpleStatement", 
		"macrosAsCommand", "includeStatement", "includeRtn", "define", "breakCommand", 
		"breakStatement", "catchCommand", "catchStatement", "closeCommand", "closeStatement", 
		"continueCommand", "doCommand", "doStatement", "elseCommand1", "elseCommand2", 
		"elseStatement", "elseifCommand", "forCommand", "forStatement", "forExpression", 
		"gotoCommand", "gotoStatement", "haltCommand", "hangCommand", "hangStatement", 
		"ifCommand", "ifStatement", "jobCommand", "jobStatement", "jobArgument", 
		"jobProcessParams", "killCommand", "killStatement", "killArgument", "lockCommand", 
		"lockStatement", "lockArgument", "lockArgument2", "mergeCommand", "mergeStatement", 
		"mergeArgument", "newCommand", "newStatement", "openCommand", "openStatement", 
		"quitCommand", "quitStatement", "readCommand", "readStatement", "readArgument", 
		"setCommand", "setStatement", "setArgument", "tcommitCommand", "throwCommand", 
		"trollbackCommand", "tryCommand", "tryStatement", "tstartCommand", "useCommand", 
		"useStatement", "viewCommand", "viewStatement", "whileCommand", "whileStatement", 
		"writeCommand", "writeStatement", "writeArgument", "xecuteCommand", "xecuteStatement", 
		"xeceuteArgument", "zkillCommand", "zkillStatement", "znspaceCommand", 
		"ztrapCommand", "zwriteCommand", "zwriteStatement", "zzdumpCommand", "zzdumpStatement", 
		"printCommand", "printStatement", "zbreakCommand", "zbreakStatement", 
		"zinsertCommand", "zloadCommand", "zprintCommand", "zremoveCommand", "zsaveCommand", 
		"systemFunction", "variable", "localVariable", "globalVariable", "localVariableList", 
		"colonExpression", "expression", "simpleExpression", "condition", "pc", 
		"arguments", "doClass", "doRoutine", "doArgument", "labelDef", "methodPublicVariables", 
		"methodContent", "labelParameter"
	};

	@Override
	public String getGrammarFileName() { return "macParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	int loopLevel = 0;
	boolean ifBlock = false;
	boolean elseBlock = false;
	int argsLevel = 0;
	boolean tryBlock = false;
	boolean catchBlock = false;
	boolean doBlock = false;
	boolean whileBlock = false;

	boolean cmp(String cmds){
	    String val = _input.LT(1).getText();
	    String[] vars = cmds.split(",");
	    for (String cmd : vars) {
	        if(val.equalsIgnoreCase(cmd)){
	            return true;
	        }
	    }
	    return false;
	}

	public macParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(222); statement();
					}
					} 
				}
				setState(227);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(macParser.EOF, 0); }
		public TerminalNode Include() { return getToken(macParser.Include, 0); }
		public IncludeStatementContext includeStatement() {
			return getRuleContext(IncludeStatementContext.class,0);
		}
		public TerminalNode EOL() { return getToken(macParser.EOL, 0); }
		public LabelDefContext labelDef() {
			return getRuleContext(LabelDefContext.class,0);
		}
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public TerminalNode CommandEOL() { return getToken(macParser.CommandEOL, 0); }
		public TerminalNode Spaces(int i) {
			return getToken(macParser.Spaces, i);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public List<TerminalNode> Spaces() { return getTokens(macParser.Spaces); }
		public TerminalNode Label() { return getToken(macParser.Label, 0); }
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(247);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(229);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(228); match(Spaces);
					}
					break;
				}
				setState(231); simpleStatement();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(232); match(Include);
				setState(233); match(Spaces);
				setState(234); includeStatement();
				setState(236);
				_la = _input.LA(1);
				if (_la==Spaces) {
					{
					setState(235); match(Spaces);
					}
				}

				setState(238);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==EOL) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(240); define();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(241); comments();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(242);
				_la = _input.LA(1);
				if ( !(((((_la - 18)) & ~0x3f) == 0 && ((1L << (_la - 18)) & ((1L << (EOL - 18)) | (1L << (Spaces - 18)) | (1L << (CommandEOL - 18)))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(243); match(Label);
				setState(245);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(244); labelDef();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public boolean quitWithoutArgs;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode CommandLBRACE() { return getToken(macParser.CommandLBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(macParser.LBRACE, 0); }
		public TerminalNode CommandRBRACE() { return getToken(macParser.CommandRBRACE, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(macParser.RBRACE, 0); }
		public BlockStatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlockStatementContext(ParserRuleContext parent, int invokingState, boolean quitWithoutArgs) {
			super(parent, invokingState);
			this.quitWithoutArgs = quitWithoutArgs;
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterBlockStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitBlockStatement(this);
		}
	}

	public final BlockStatementContext blockStatement(boolean quitWithoutArgs) throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState(), quitWithoutArgs);
		enterRule(_localctx, 4, RULE_blockStatement);

		if(quitWithoutArgs) {loopLevel++;}

		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(249);
			_la = _input.LA(1);
			if ( !(_la==LBRACE || _la==CommandLBRACE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(253);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(250); statement();
					}
					} 
				}
				setState(255);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(256);
			_la = _input.LA(1);
			if ( !(_la==RBRACE || _la==CommandRBRACE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}

			if(quitWithoutArgs) {loopLevel--;}

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentsContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(macParser.COMMENT, 0); }
		public CommentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).enterComments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof macParserListener ) ((macParserListener)listener).exitComments(this);
		}
	}

	public final CommentsContext comments() throws RecognitionException {
		CommentsContext _localctx = new CommentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comments);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(258); match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
